update config with namespace

--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: hello-world-java
+  namespace: hello-world-java
   labels:
     app: hello-world-java
 spec:
