--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -4,6 +4,7 @@ metadata:
   labels:
     app: hello-world-java
   name: hello-world-java
+  namespace: hello-world-java
 spec:
   replicas: 1
   selector:
@@ -39,5 +40,5 @@ spec:
             fieldRef:
               fieldPath: status.podIP
         - name: TEXT_MESSAGE
-          value: 'Hello World'
+          value: 'Hello Kubernetes World'
         resources: {}
