change liveness/readiness probe path

--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -43,13 +43,13 @@ spec:
           value: 'Hello Kubernetes World'
         livenessProbe:
             httpGet:
-              path: /health
+              path: /health/live
               port: 8080
             initialDelaySeconds: 30
             periodSeconds: 3
         readinessProbe:
             httpGet:
-              path: /health
+              path: /health/ready
               port: 8080
             initialDelaySeconds: 5
             periodSeconds: 2
