--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -9,6 +9,7 @@ spec:
   type: NodePort
   ports:
   - name: http-listener-1
-    port: 8080
+    port: 80
+    targetPort: 8080
   selector:
     app: hello-world-java
