--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.trendev</groupId>
-    <artifactId>hello-world-java</artifactId>
-    <version>1.0</version>
+    <artifactId>helloworld</artifactId>
+    <version>2.0</version>
     <packaging>war</packaging>
-    <name>hello-world-java</name>
+    <name>helloworld</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
