--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -54,4 +54,10 @@ spec:
             initialDelaySeconds: 30
             periodSeconds: 2
             failureThreshold: 20
+        startupProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            failureThreshold: 12
+            periodSeconds: 5
         resources: {}
