--- a/k8s/cluster/rbac.yml
+++ b/k8s/cluster/rbac.yml
@@ -2,6 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: payara-cluster
+  namespace: helloworld
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
