--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -6,7 +6,7 @@ metadata:
   name: helloworld
   namespace: helloworld
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
       app: helloworld
@@ -34,6 +34,8 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: status.podIP
+            - name: RECORDS_MAX_SIZE
+              value: "30"
             - name: TEXT_MESSAGE
               value: "Hello Kubernetes World"
           livenessProbe:
