--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -7,6 +7,11 @@ metadata:
   namespace: helloworld
 spec:
   replicas: 1
+  strategy:
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
+    type: RollingUpdate
   selector:
     matchLabels:
       app: helloworld
