--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -43,6 +43,8 @@ spec:
               value: "40"
             - name: TEXT_MESSAGE
               value: "Hello Kubernetes World"
+            - name: CLUSTERED_OBJECT_TYPE
+              value: "hazelcast-replicated-map"
           args:
             - "--clustermode"
             - "kubernetes:$(MY_POD_NAMESPACE),helloworld"
