--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>fr.trendev</groupId>
-    <artifactId>helloworld</artifactId>
-    <version>2.1</version>
+    <artifactId>simdg</artifactId>
+    <version>3.0</version>
     <packaging>war</packaging>
-    <name>helloworld</name>
+    <name>simdg</name>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
