--- a/k8s/service.yml
+++ b/k8s/service.yml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: helloworld
-  namespace: helloworld
+  name: simdg
+  namespace: simdg
   labels:
-    app: helloworld
+    app: simdg
 spec:
   type: NodePort
   ports:
@@ -12,4 +12,4 @@ spec:
     port: 80
     targetPort: 8080
   selector:
-    app: helloworld
+    app: simdg
